style.css
* {
    background-color: #292929;
    color: #E6E6E6;
    font-size: 36px;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.calculator {
    width: 350px;
    min-width: 350px;
    height: 550px;
    border: 3px solid #E6E6E6;
    border-radius: 10px;
}

.display {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 16px;
}

#input-display {
    text-align: right;
    background-color: #353535;
    color: #33FF33;
    width: 90%;
    height: 50px;
    margin: 5px;
    border-radius: 10px;
    caret-color: transparent;
    font-family: "Bitcount Single", system-ui;
    font-optical-sizing: auto;
    font-style: normal;
    font-size: 40px;
    font-variation-settings: "slnt" 0, "CRSV" 0.5, "ELSH" 0, "ELXP" 0;
}

#input-display::placeholder {
    background-color: #353535;
    color: #33FF33;
    font-family: "Bitcount Single", system-ui;
    font-optical-sizing: auto;
    font-style: normal;
    font-size: 40px;
    font-variation-settings: "slnt" 0, "CRSV" 0.5, "ELSH" 0, "ELXP" 0;
}

#input-display:focus {
  outline: none;
}

.buttons {
    display: flex;
    flex-wrap: wrap;
    gap: 8px;
    padding: 5px;
    margin-left: 5px;
    margin-right: 5px;
    margin-bottom: 5px;
}

.memory-button {
    background-color: LightGray;
    color: #292929;
    width: calc(25% - 6px);
    height: 45px;
    font-size: 32px;
    border-radius: 5px;
}

.button {
    width: calc(25% - 6px);
    height: 60px;
    border-radius: 5px;
}

.operate-button {
    width: calc(25% - 6px);
    height: 60px;
    background-color: orange;
    font-weight: bold;
    border-radius: 5px;
}

.operate-button:hover {
    background-color: #E6E6E6;
    color: #292929;
}

.result-button {
    width: calc(25% - 6px);
    height: 60px;
    background-color: orange;
    font-weight: bold;
    border-radius: 5px;
}

.white-button {
    width: calc(25% - 6px);
    height: 60px;
    background-color: #E6E6E6;
    color: #292929;
    font-weight: bold;
    border-radius: 5px;
}

.exponent {
    vertical-align: super;
    font-size: smaller;
    line-height: normal;
}

